--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/nathanfaucett/status_codes.git"
   },
   "main": "src/index.js",
+  "browser": "src/browser.js",
   "keywords": [
     "status_codes",
     "status_codes.js"
@@ -20,7 +21,7 @@
     "grunt-jsbeautifier": ""
   },
   "dependencies": {
-    "environment": "nathanfaucett/environment"
+    "for_each": "nathanfaucett/for_each"
   }
 }
 
