--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "status_codes.js"
   ],
   "author": "Nathan Faucett",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsbeautifier": ""
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-jsbeautifier": "^0.2.10"
   },
   "dependencies": {
-    "for_each": "nathanfaucett/for_each"
+    "for_each": "git://github.com/nathanfaucett/object-for_each.git"
   }
 }
-
