--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "status_codes",
+  "name": "@nathanfaucett/status_codes",
   "version": "0.0.1",
   "description": "Status Codes for the browser and node.js",
   "repository": {
@@ -16,11 +16,11 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-jsbeautifier": "^0.2.10"
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-jsbeautifier": "^0.2.13"
   },
   "dependencies": {
-    "for_each": "git://github.com/nathanfaucett/object-for_each.git"
+    "@nathanfaucett/object-for_each": "^0.0.1"
   }
 }
